--- a/gnome-speech/trunk/PKGBUILD
+++ b/gnome-speech/trunk/PKGBUILD
@@ -2,22 +2,25 @@
 # Maitnainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-speech
-pkgver=0.4.20
+pkgver=0.4.21
 pkgrel=1
 pkgdesc="Gnome Text-to-Speech"
 arch=(i686 x86_64)
 license=('LGPL')
 url="http://www.gnome.org"
-depends=('libbonobo>=2.22.0')
-makedepends=('perlxml' 'pkgconfig')
+depends=('libbonobo>=2.24.0')
+makedepends=('perlxml' 'pkgconfig' 'espeak' 'java-access-bridge' 'openjdk6')
+optdepends=('espeak: Text to speech engine'
+	    'festival: Text to speech engine'
+	    'java-access-bridge: Speech support for java')
 options=('!libtool')
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/0.4/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('613aabaa3cb8d6a1a2155e60560b7175')
+md5sums=('c6cb75005fcf974d75206f5d1567981f')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --disable-static || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
