--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,25 +2,25 @@
 # Maintainer:  Jan de Groot <jan@archlinux.org>
 
 pkgname=gnome-desktop
-pkgver=2.22.3
+pkgver=2.24.0
 pkgrel=1
 pkgdesc="The GNOME Desktop"
 arch=(i686 x86_64)
 license=('GPL' 'LGPL')
-depends=('libgnomeui>=2.22.1' 'startup-notification>=0.9')
-makedepends=('perlxml' 'gnome-doc-utils>=0.12.2' 'pkgconfig')
+depends=('libgnomeui>=2.24.0' 'startup-notification>=0.9')
+makedepends=('perlxml' 'gnome-doc-utils>=0.14.0' 'pkgconfig')
 url="http://www.gnome.org"
 groups=('gnome')
 options=('!libtool')
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('c5e24ee437e5d98c03299b0442523a6b')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('a2cc0424619f271bf1a65cc0fbe782f0')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
         --localstatedir=/var --disable-static \
 	--with-gnome-distributor="Archlinux" \
 	--disable-scrollkeeper || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
