--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,22 +2,22 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libsoup
-pkgver=2.4.1
-pkgrel=2
+pkgver=2.24.0.1
+pkgrel=1
 pkgdesc="Gnome HTTP Library"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('glib2>=2.16.4' 'gnutls>=2.4.1' 'libxml2>=2.6.32')
+depends=('glib2>=2.18.1' 'gnutls>=2.4.1' 'libxml2>=2.6.32')
 makedepends=('perlxml' 'pkgconfig')
 url="http://www.gnome.org"
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.4/${pkgname}-${pkgver}.tar.bz2)
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.24/${pkgname}-${pkgver}.tar.bz2)
 options=('!libtool' '!emptydirs')
-md5sums=('d0fc91ccb9da401e9e40d2f4612bdac9')
+md5sums=('44187699fe135f03a2a1adec702e1fa8')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --disable-static || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
