--- a/libwnck/trunk/PKGBUILD
+++ b/libwnck/trunk/PKGBUILD
@@ -1,22 +1,22 @@
 # $Id$
 # Maintainer: Jan de Groot  <jgc@archlinux.org>
 pkgname=libwnck
-pkgver=2.22.3
+pkgver=2.24.0
 pkgrel=1
 pkgdesc="Window Navigator Construction Kit"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('gtk2>=2.12.11' 'startup-notification>=0.9' 'libxres')
+depends=('gtk2>=2.14.3' 'startup-notification>=0.9' 'libxres')
 makedepends=('pkgconfig' 'perlxml' 'libxt')
 options=('!libtool')
 url="http://www.gnome.org/"
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('12cf787efa0b9d95bc53613bcc7d958e')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('860cd0ddce03c41a328e580d4efd4654')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --disable-static || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
