--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -3,24 +3,25 @@
 # Contributor: Kritoke <kritoke@nospam.gmail.com>
 
 pkgname=gnome-nettool
-pkgver=2.22.0
+pkgver=2.22.1
 pkgrel=1
 pkgdesc="A Collection of GNOME2 Networking Tools."
 arch=(i686 x86_64)
 license=('GPL')
-depends=('gconf>=2.22.0' 'libglade>=2.6.2')
-makedepends=('gnome-doc-utils>=0.12.2' 'pkgconfig')
+depends=('gconf>=2.24.0' 'libglade>=2.6.3' 'dnsutils' 'netkit-bsd-finger' 'whois')
+makedepends=('gnome-doc-utils>=0.14.0' 'pkgconfig')
 conflicts=('gnome-network')
 replaces=('gnome-netinfo')
 groups=('gnome-extra')
 url="http://www.gnome.org"
+install=gnome-nettool.install
 source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('290dd50a08a3859332afb6daf46dde25')
+md5sums=('afcaff8ebc76b5f352902ed424dc2856')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --disable-scrollkeeper || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
