--- a/libgnomekbd/trunk/PKGBUILD
+++ b/libgnomekbd/trunk/PKGBUILD
@@ -2,27 +2,27 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=libgnomekbd
-pkgver=2.22.0
-pkgrel=2
+pkgver=2.24.0
+pkgrel=1
 pkgdesc="Gnome keyboard library"
 url="http://gswitchit.sourceforge.net"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('libxklavier>=3.6' 'libgnomeui>=2.22.1')
+depends=('libxklavier>=3.7' 'gconf>=2.24.0' 'libglade>=2.6.3')
 makedepends=('perlxml' 'pkgconfig')
 options=('!libtool' '!emptydirs')
 install=libgnomekbd.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('a8b64278ae3471583607d734db9347eb')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('43e4d090bc67a1984bebf551637783fd')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --disable-static || return 1
   make || return 1
-  make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR=${startdir}/pkg install || return 1
+  make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
-  mkdir -p ${startdir}/pkg/usr/share/gconf/schemas
-  gconf-merge-schema ${startdir}/pkg/usr/share/gconf/schemas/${pkgname}.schemas ${startdir}/pkg/etc/gconf/schemas/*.schemas || return 1
-  rm -f ${startdir}/pkg/etc/gconf/schemas/*.schemas
+  install -m755 -d "${pkgdir}/usr/share/gconf/schemas"
+  gconf-merge-schema "${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas" ${pkgdir}/etc/gconf/schemas/*.schemas || return 1
+  rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
 }
