--- a/gucharmap/trunk/PKGBUILD
+++ b/gucharmap/trunk/PKGBUILD
@@ -2,29 +2,29 @@
 # Maintainer: Jan De Groot <jgc@archlinux.org>
 
 pkgname=gucharmap
-pkgver=2.22.3
+pkgver=2.24.0
 pkgrel=1
 pkgdesc="Gnome Unicode Charmap"
 arch=(i686 x86_64)
 license=('GPL')
 url="http://www.gnome.org"
-depends=('gconf>=2.22.0')
-makedepends=('perlxml' 'gnome-doc-utils>=0.12.2' 'pkgconfig')
+depends=('gconf>=2.24.0')
+makedepends=('perlxml' 'gnome-doc-utils>=0.14.0' 'pkgconfig')
 groups=('gnome-extra')
 options=('!libtool' '!emptydirs')
 install=gucharmap.install
-source=(http://ftp.gnome.org/pub/gnome/sources/gucharmap/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('f57290934466fda80eb883f77c0a2ff1')
+source=(http://ftp.gnome.org/pub/gnome/sources/gucharmap/2.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('5dc5f1af56a5bd1a525125b315708d86')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --disable-static \
 	      --disable-scrollkeeper || return 1
   make || return 1
-  make -j1 GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR=${startdir}/pkg install || return 1
+  make -j1 GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
  
-  install -m755 -d ${startdir}/pkg/usr/share/gconf/schemas
-  gconf-merge-schema ${startdir}/pkg/usr/share/gconf/schemas/${pkgname}.schemas ${startdir}/pkg/etc/gconf/schemas/*.schemas || return 1
-  rm -f ${startdir}/pkg/etc/gconf/schemas/*.schemas
+  install -m755 -d "${pkgdir}/usr/share/gconf/schemas"
+  gconf-merge-schema "${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas" ${pkgdir}/etc/gconf/schemas/*.schemas || return 1
+  rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
 }
