--- a/metacity/trunk/PKGBUILD
+++ b/metacity/trunk/PKGBUILD
@@ -2,29 +2,29 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=metacity
-pkgver=2.22.0
+pkgver=2.24.0
 pkgrel=1
 pkgdesc="A window manager for GNOME2"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('startup-notification>=0.9' 'gconf>=2.22,0')
+depends=('startup-notification>=0.9' 'gconf>=2.24.0')
 makedepends=('perlxml' 'pkgconfig')
 url="http://www.gnome.org"
 groups=('gnome')
 options=('!libtool' '!emptydirs')
 install=metacity.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('8cb6d02cf66a1003532b4f5d2754d696')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('d4aa782d5f71b6c42514b239684a4aa3')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --libexecdir=/usr/lib/metacity \
               --localstatedir=/var --disable-static || return 1
   make || return 1
-  make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR=${startdir}/pkg install || return 1
+  make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
 
-  install -m755 -d ${startdir}/pkg/usr/share/gconf/schemas
-  gconf-merge-schema ${startdir}/pkg/usr/share/gconf/schemas/${pkgname}.schemas ${startdir}/pkg/etc/gconf/schemas/*.schemas || return 1
-  rm -f ${startdir}/pkg/etc/gconf/schemas/*.schemas
+  install -m755 -d "${pkgdir}/usr/share/gconf/schemas"
+  gconf-merge-schema "${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas" ${pkgdir}/etc/gconf/schemas/*.schemas || return 1
+  rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
 }
