--- a/gnome-applets/trunk/PKGBUILD
+++ b/gnome-applets/trunk/PKGBUILD
@@ -2,33 +2,31 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-applets
-pkgver=2.22.3
+pkgver=2.24.0.1
 pkgrel=1
 pkgdesc="GNOME Applets"
 arch=(i686 x86_64)
 license=('GPL')
-depends=('gstreamer0.10-base-plugins' 'gnome-panel>=2.22.2' 'libgtop>=2.22.3' 'gucharmap>=2.22.3' 'libnotify>=0.4.4' 'cpufrequtils' 'libgnomekbd>=2.22.0')
-makedepends=('perlxml' 'gnome-doc-utils>=0.12.2' 'pkgconfig' 'gnome-settings-daemon>=2.22.2.1')
+depends=('gstreamer0.10-base-plugins' 'gnome-panel>=2.24.0' 'libgtop>=2.24.0' 'gucharmap>=2.24.0' 'libnotify>=0.4.4' 'cpufrequtils' 'libgnomekbd>=2.24.0')
+makedepends=('perlxml' 'gnome-doc-utils>=0.14.0' 'pkgconfig' 'gnome-settings-daemon>=2.24.0')
 options=(!emptydirs)
 url="http://www.gnome.org"
 groups=(gnome)
 install=gnome-applets.install
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2
-	gnome-applets-2.21.1-mixer-sync.patch)
-md5sums=('9e64d2827b0e8d2a03ebffb2c3499566' 'a0db1d8136099199f4fe520cf5b6045c')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('e6dcab2a0ee9519e8cfb62425d2c1b70')
 	
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
-  patch -Np1 -i ${startdir}/src/gnome-applets-2.21.1-mixer-sync.patch || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --libexecdir=/usr/lib/gnome-applets \
               --localstatedir=/var --disable-static \
 	      --disable-scrollkeeper || return 1
   make || return 1
-  make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR=${startdir}/pkg install || return 1
-  rm -f ${startdir}/pkg/usr/lib/*.la
+  make GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=1 DESTDIR="${pkgdir}" install || return 1
+  rm -f ${pkgdir}/usr/lib/*.la
 
-  install -m755 -d ${startdir}/pkg/usr/share/gconf/schemas
-  gconf-merge-schema ${startdir}/pkg/usr/share/gconf/schemas/${pkgname}.schemas ${startdir}/pkg/etc/gconf/schemas/*.schemas || return 1
-  rm -f ${startdir}/pkg/etc/gconf/schemas/*.schemas
+  install -m755 -d "${pkgdir}/usr/share/gconf/schemas"
+  gconf-merge-schema "${pkgdir}/usr/share/gconf/schemas/${pkgname}.schemas" ${pkgdir}/etc/gconf/schemas/*.schemas || return 1
+  rm -f ${pkgdir}/etc/gconf/schemas/*.schemas
 }
