--- a/gnome-backgrounds/trunk/PKGBUILD
+++ b/gnome-backgrounds/trunk/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gnome-backgrounds
-pkgver=2.22.0
+pkgver=2.24.0
 pkgrel=1
 pkgdesc="Background images and data for GNOME"
 arch=(i686 x86_64)
@@ -10,13 +10,13 @@ makedepends=('perlxml')
 url="http://www.gnome.org"
 license=('GPL')
 groups=('gnome')
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.22/${pkgname}-${pkgver}.tar.bz2)
-md5sums=('1997e020288ea6b91ed460c2c6bfc8d4')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/2.24/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('fb84a0b2e63dd0aaa47d490d2a43209f')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
