--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -2,27 +2,24 @@
 # Maintainer: Jan de Groot <jgc@archlinux.org>
 
 pkgname=gvfs
-pkgver=0.2.5
-pkgrel=3
+pkgver=1.0.1
+pkgrel=1
 pkgdesc="Userspace virtual filesystem implemented as a pluggable module for gio"
 arch=(i686 x86_64)
 license=('LGPL')
-depends=('libsoup>=2.4.1' 'libcdio>=0.80-2' 'fuse>=2.7.3' 'bluez>=4.1' 'smbclient>=3.0.31' 'libgphoto2>=2.4.2' 'gnome-keyring>=2.22.3' 'avahi>=0.6.23' 'libarchive>=2.5.5')
+depends=('libsoup>=2.24.0.1' 'libcdio>=0.80-3' 'fuse>=2.7.3' 'bluez' 'smbclient>=3.0.31' 'libgphoto2>=2.4.2' 'gnome-keyring>=2.24.0' 'avahi>=0.6.23' 'libarchive>=2.5.5')
 makedepends=('perlxml' 'pkgconfig')
 url="http://www.gnome.org"
 install=gvfs.install
 options=(!libtool)
-source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/0.2/${pkgname}-${pkgver}.tar.bz2
-	bug536614.patch)
-md5sums=('01676053d9481022ade9a5274576541b'
-         '80e6b702f3a28dc3fc3b94b06f4442fd')
+source=(http://ftp.gnome.org/pub/gnome/sources/${pkgname}/1.0/${pkgname}-${pkgver}.tar.bz2)
+md5sums=('0d123f87e3e660271cd9d11b8c592c5a')
 
 build() {
-  cd ${startdir}/src/${pkgname}-${pkgver}
-  patch -Np2 -i ${srcdir}/bug536614.patch || return 1
+  cd "${srcdir}/${pkgname}-${pkgver}"
   ./configure --prefix=/usr --sysconfdir=/etc \
               --localstatedir=/var --disable-static \
 	      --libexecdir=/usr/lib/gvfs || return 1
   make || return 1
-  make DESTDIR=${startdir}/pkg install || return 1
+  make DESTDIR="${pkgdir}" install || return 1
 }
