--- a/proftpd/trunk/PKGBUILD
+++ b/proftpd/trunk/PKGBUILD
@@ -3,8 +3,8 @@
 # Maintainer: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=proftpd
-pkgver=1.3.2c
-pkgrel=2
+pkgver=1.3.2d
+pkgrel=1
 pkgdesc="A high-performance, scalable FTP server"
 arch=('i686' 'x86_64')
 url="http://www.proftpd.org"
@@ -15,7 +15,7 @@ source=(ftp://ftp.proftpd.org/distrib/source/${pkgname}-${pkgver}.tar.bz2
 	'proftpd'
         'proftpd.logrotate'
 	'proftpd.conf.d')
-md5sums=('559fd3fb6959d42ddd66b333a03b0c49'
+md5sums=('0941935e30199a3f22f7225fe76bc489'
          '99f6f9a989e70e3fa50809fc2bbbbb0a'
          'ddb09eb13131becdf0e081eef413116b'
          '71d5932b0461c318ed68c2c0c2660736')
